# airflow-provider-skypilot

./: .astro-registry.yaml  README.md  pyproject.toml
sample_provider/hooks/: ssh.py
sample_provider/operators/: __init__.py  bash_cmd.py  sky_core.py  sky_operators.py  ssh.py  test_operator.py  test_operator2.py  utils.py
sample_provider/skycore/: sky_core.py  sky_log.py
skypilot_provider/: __init__.py
skypilot_provider/example_dags/: Dockerfile  sky_airflow_example.py
skypilot_provider/hooks/: sky_ssh.py
skypilot_provider/operators/: __init__.py  core_function.py  rsync.py  sky_operators.py  ssh.py
skypilot_provider/skycore/: sky_bash_cmd.py  sky_core.py  sky_log.py
